--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -3,7 +3,7 @@
   }
   
   .btn {
-    padding: 8px 20px;
+    padding: 8px 14px;
     border-radius: 2px;
     outline: none;
     border: none;
@@ -17,10 +17,10 @@
   }
   
   .btn--outline {
-    background-color: transparent;
+    background-color: #fccd12;
     color: #fff;
     padding: 8px 20px;
-    border: 1px solid var(--primary);
+    border-radius: 20px;
     transition: all 0.3s ease-out;
   }
   
@@ -37,7 +37,7 @@
   .btn--large:hover,
   .btn--medium:hover {
     transition: all 0.3s ease-out;
-    background: #fff;
+    background: #fbc901;
     color: #242424;
     transition: 250ms;
   }
