--- a/src/components/pages/CarPage.css
+++ b/src/components/pages/CarPage.css
@@ -1,5 +1,5 @@
 .carPage{
-    margin: 10px 20px;
+    margin: 40px 80px;
 }
 
 .auction-title{
@@ -59,6 +59,50 @@ button.btn-share:after{
     -webkit-order: 1;
     order: 1;
     margin-bottom: 17px;
+}
+
+.barCarPage{
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.bidBarCarPage{
+    background: #262626;
+    border-radius: 8px;
+    position: relative;
+    color: #fff;
+    font-style: normal;
+    font-weight: 400;
+    white-space: nowrap;
+    align-items: center;
+}
+
+.placeBidBtn{
+    background-color: #4ad493;
+    padding: 0 14px;
+    margin: 6px 0;
+    border: none;
+    border-radius: 8px;
+    line-height: 36px;
+}
+
+/* Car Details */
+.detail-section{
+padding: 32px 4px 16px;
+border-bottom: 1px solid #ebebeb;
+width: 60vw;
+}
+
+h4{
+    margin-bottom: 24px;
+    font-size: 22px;
+    line-height: 22px;
+}
+
+.detail-body{
+    line-height: 27px;
+    font-size: 14px;
 }
 
 @media (min-width: 769px){
