--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -135,7 +135,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      transform: translate(1%, 50%);
+      /* transform: translate(1%, 50%); */
     }
   
     .menu-icon {
