--- a/src/components/pages/CarPage.css
+++ b/src/components/pages/CarPage.css
@@ -496,14 +496,9 @@ li.qanda{
 .main {
   margin-right: 4px;
   flex-grow: 1;
-  min-width: 326px;
+  max-width: 60vw;
   border-radius: 0;
   cursor: pointer;
-}
-
-div.preload-wrap {
-  background: #fafafa;
-  border-radius: 3px;
 }
 
 .images {
@@ -517,7 +512,7 @@ div.preload-wrap {
   display: flex;
   flex-wrap: wrap;
   position: relative;
-  width: 326px;
+  width: 500px;
 }
 
 .group-name {
@@ -539,12 +534,14 @@ div.preload-wrap {
   border-radius: 0;
   margin-bottom: 4px;
   position: relative;
-  width: 161px;
+  width: 50%;
   /* height: 123px; */
   cursor: pointer;
+  background: #fafafa;
+  border-radius: 3px;
 }
 
-div.preload-wrap img {
+.preload-wrap img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -552,6 +549,10 @@ div.preload-wrap img {
   border-radius: 3px;
   opacity: 1;
 }
+/* 
+.preload-wrap:nth-of-type(2n) {
+  margin-left: 2px;
+} */
 
 .all {
   padding: 10px;
