--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,8 @@
 .footer-container {
-    background-color: #242424;
-    padding: 4rem 0 2rem 0;
+    background-color: #3a3b3c;
+    padding: 2rem 2rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     overflow: auto;
@@ -121,8 +121,8 @@
     width: 240px;
   }
   
-  .social-logo {
-    color: #fff;
+  .social-logo img{
+    /* color: #fff;
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
@@ -130,7 +130,9 @@
     font-size: 2rem;
     display: flex;
     align-items: center;
-    margin-bottom: 16px;
+    margin-bottom: 16px; */
+    width: 170px;
+    height: 66px;
   }
   
   .website-rights {
@@ -162,3 +164,162 @@
   
   @media screen and (max-width: 768px) {
   }
+
+#autos-reviews {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    background: #fff;
+}
+
+.container-fluid {
+  width: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.review-wrap {
+  margin-bottom: 40px;
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.section {
+  padding-top: 32px;
+  border-top: 1px solid #ebebeb;
+  flex: 1 1 40%;
+}
+
+.section.why ul {
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 0;
+}
+
+.section.why ul li {
+  margin-bottom: 12px;
+  font-size: 15px;
+  line-height: 20px;
+  list-style: none;
+}
+
+#autos-reviews h6 {
+  margin-bottom: 14px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+}
+
+.footerStats > li > strong::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  bottom: -2px;
+  height: 5px;
+  background: #ffe55f;
+  border-radius: 2px;
+  z-index: 1;
+}
+
+strong {
+  font-size: 16px;
+  line-height: 16px;
+  letter-spacing: -1px;
+  display: inline-block;
+  position: relative;
+}
+
+#autos-reviews .section.stories span.user {
+  font-weight: 600;
+  line-height: 16px;
+  color: #939393;
+}
+.section {
+  padding-top: 32px;
+  border-top: 1px solid #ebebeb;
+}
+#autos-reviews .section.stories span.reviewer-pic {
+  margin-right: 6px;
+  width: 22px;
+  height: 22px;
+}
+span.reviewer-pic.review1 {
+  background: transparent url(../images/img-1.jpg);
+}
+
+#autos-reviews .section.stories span.listing {
+  line-height: 16px;
+  color: #939393;
+}
+
+#autos-reviews .section.stories span.blurb {
+  padding-top: 6px;
+  display: block;
+  font-size: 15px;
+  line-height: 22px;
+}
+
+#autos-reviews .section.stories {
+  padding-right: 80px;
+}
+
+#autos-reviews .section.daily {
+  padding-bottom: 0;
+  flex: 1 1 20%;
+  display: block;
+}
+
+#autos-reviews .section.daily form>.d-flex {
+  flex-direction: column!important;
+}
+
+fieldset {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+label.placeholder-shown {
+  padding: 0 0.75rem;
+  position: absolute;
+  margin-top: -10px;
+  top: 50%;
+  left: 1px;
+  z-index: 4;
+  font-size: 14px;
+  line-height: 21px;
+  color: #828282;
+  cursor: text;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: .875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #262626;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #d5d5d5;
+  border-radius: 6px;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.aboutText{
+  color: white;
+}
